# toolbelt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  go.mod  go.sum  main.go  pyproject.toml
.cursor/: mcp.json
analysis/zsh_history/: .gitignore  zsh_history.ipynb  zsh_history.py
cli/: .gitignore  go.mod  main.go
cli/internal/cli/: cli.go
cli/internal/config/: config.go
cli/internal/tree/: tree.go
cli/internal/update/: update.go
cli/pkg/cli/: cli.go
cli/pkg/comparable/: includes.go
cli/pkg/datadog/: form.go
cli/pkg/devspace/: devspace.go
cli/pkg/dotfile/: dotfile.go
cli/pkg/git/: git.go
cli/pkg/repo/: dsi.go  mfs.go  slg.go
cli/pkg/shell/: shell.go
cmd/: cmd.go  external.go  internal.go
config/: config.go
hooks/: current.go  interface.go
internal/: internal.go
internal/cli/: cli.go
internal/config/: config.go
internal/update/: update.go
linear/: README.md  bun.lockb  genqlient.graphql  genqlient.yaml  index.ts  package.json  schema.graphql
pkg/comparable/: set.go
pkg/devspace/: devspace.go
pkg/fs/: fs.go
pkg/git/: git.go
pkg/kill/: kill.go
pkg/morning/: morning.go
pkg/repo/: dsi.go  mf.go  mfs.go  repo.go  slg.go
pkg/shell/: shell.go
pkg/vscode/: vscode.go
src/toolbelt/: __init__.py  cli.py  cursor_edit.py  datadog_form.py  editor.py  env_var.py  fs.py  github.py  linear.py  llm.py  logger.py  mcp_server.py  repos.py  standup.py  zsh.py
src/toolbelt/agent/: cli.py
src/toolbelt/bootstrap/: __init__.py  helm_env.py  repo_setup.py
src/toolbelt/cursor/: cli.py  edit.py
src/toolbelt/git/: branches.py  cli.py  commands.py  commits.py  constants.py  exec.py  repo.py  workflow.py  worktrees.py  worktrees_ops.py
src/toolbelt/git/stack/: __init__.py  append.py  cli.py  forge.py  lineage.py  sync.py  viz.py  worktree.py
src/toolbelt/github/: api.py  client.py  pr_monitor.py  status.py
src/toolbelt/github/hooks/: base.py  cursor.py  logging.py
src/toolbelt/linear/: __init__.py  client.py
src/toolbelt/linear/graphql/: issue_by_identifier.graphql  issue_move_to_started.graphql  issue_update_description.graphql  issues_backlog_or.graphql  issues_in_progress_no_history.graphql  issues_in_progress_with_history.graphql  team_states.graphql
src/toolbelt/linear_graphql/: issue_create.graphql  issues_backlog_in.graphql  viewer_id.graphql  viewer_teams.graphql
src/toolbelt/task/: __init__.py  cli.py  textual_picker.py
tests/: conftest.py  test_append.py  test_lineage.py  test_restack.py  test_sync.py  test_viz.py
toolbelt/: pyproject.toml
toolbelt/src/toolbelt/: __init__.py  cli.py  env_var.py  git.py  repos.py
toolbelt/src/toolbelt/git/: cli.py
