[project]
name = "toolbelt"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "pyyaml",
    "toml",
    "textual",
    "typer>=0.16.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "pyarrow>=20.0.0",
    "mcp>=1.9.4",
    "langchain-openai>=1.1.1",
    "deepagents>=0.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "openai>=2.9.0",
]

[dependency-groups]
dev = [
    "types-toml",
    "pre-commit",
    "mypy",
    "ruff",
    "types-pyyaml>=6.0.12.20250516",
    "pandas-stubs>=2.2.3.250527",
    "boto3-stubs>=1.38.36",
    "types-seaborn>=0.13.2.20250516",
]

[project.scripts]
toolbelt = "toolbelt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
mypy_path = "src"
[[tool.mypy.overrides]]
module = [
    "deepagents.*",
    "langchain.*",
    "langgraph.*",
]
ignore_missing_imports = true
