[project]
name = "toolbelt"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = ["toml>=0.10.2"]

[dependency-groups]
dev = ["types-toml", "pre-commit", "mypy", "ruff"]

[project.scripts]
toolbelt = "toolbelt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
